# lubrication

./: CMakeLists.txt  environment.yml  pyproject.toml
.github/workflows/: build.yml
src/: c_lubrication.cpp  eigen_defines.h
tests/: test_import.py
